--- a/app.json
+++ b/app.json
@@ -30,13 +30,15 @@
         "backgroundColor": "#191919"
       },
       "package": "io.encriptados.ghost.app",
-      "versionCode": 7
+      "versionCode": 7,
+      "newArchEnabled": true
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "jsEngine": "hermes",
     "plugins": [
       "expo-router",
       "expo-font",
