--- a/package.json
+++ b/package.json
@@ -10,65 +10,69 @@
     "test": "jest --watchAll",
     "build:local:android:apk": "eas build --platform android --profile production-android --local",
     "build:local:android:aab": "eas build -p android --local",
-    "build:local:ios": "eas build -p ios --local"
+    "build:local:ios": "eas build -p ios --local",
+    "postinstall": "npx npm-force-resolutions"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/config-plugins": "^9.0.0",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/prebuild-config": "^8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^13.6.9",
-    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/assets-registry": "^0.74.84",
     "@react-native/js-polyfills": "^0.74.84",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.3",
     "@shopify/restyle": "^2.4.2",
     "@tanstack/react-query": "^5.29.0",
     "@testing-library/react-native": "^12.6.1",
     "apisauce": "^3.0.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~51.0.20",
-    "expo-application": "~5.9.1",
+    "expo": "~52.0.36",
+    "expo-application": "~6.0.2",
     "expo-custom-switch": "^1.0.2",
-    "expo-dev-client": "~4.0.20",
-    "expo-font": "~12.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.18",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-dev-client": "~5.0.12",
+    "expo-font": "~13.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
+    "expo-router": "^3.5.24",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "^0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "formik": "^2.4.5",
     "i18next": "^23.11.0",
     "immer": "^10.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.76.7",
     "react-native-country-flag": "^2.0.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.8.6",
+    "react-native-webview": "^13.12.5",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
@@ -76,14 +80,23 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native-dotenv": "^0.2.2",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.5",
+    "npm-force-resolutions": "^0.0.10",
     "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
+  },
+  "resolutions": {
+    "expo-modules-autolinking": "2.0.0",
+    "@expo/config-plugins": "9.0.0",
+    "@expo/prebuild-config": "8.0.0",
+    "metro": "0.81.3",
+    "metro-config": "0.81.3",
+    "metro-resolver": "0.81.3"
   },
   "private": true
 }
