--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
