--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ expo-env.d.ts
 
 /android
 /ios
+
+
+ProyectoRespaldoNuevo/
+appEncriptados/
+encriptados-app/
+encriptados-wordpress-theme/
+encriptados-wordpress/
+encriptados_web/
