--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-router": "^3.5.24",
+    "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -52,8 +52,8 @@
     "formik": "^2.4.5",
     "i18next": "^23.11.0",
     "immer": "^10.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^14.1.0",
     "react-native": "^0.76.7",
     "react-native-country-flag": "^2.0.2",
