Cambio para que no se cierre sesión y nombre de app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Fantasma",
+    "name": "Encriptados",
     "slug": "encriptados",
     "version": "3.0.3",
     "orientation": "portrait",
