--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@testing-library/react-native": "^12.6.1",
     "apisauce": "^3.0.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~52.0.41",
+    "expo": "~52.0.42",
     "expo-application": "~6.0.2",
+    "expo-cli": "^6.3.12",
     "expo-custom-switch": "^1.0.2",
-    "expo-dev-client": "~5.0.12",
+    "expo-dev-client": "~5.0.16",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
@@ -47,7 +48,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.5",
     "i18next": "^23.11.0",
@@ -55,7 +56,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^14.1.0",
-    "react-native": "^0.76.7",
+    "react-native": "0.76.8",
     "react-native-country-flag": "^2.0.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
