--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "test": "jest --watchAll",
     "build:local:android:apk": "eas build --platform android --profile production-android --local",
     "build:local:android:aab": "eas build -p android --local",
-    "build:local:ios": "eas build -p ios --local",
-    "postinstall": "npx npm-force-resolutions"
+    "build:local:ios": "eas build -p ios --local"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/config-plugins": "^9.0.0",
     "@expo/metro-runtime": "~4.0.1",
-    "@expo/prebuild-config": "^8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -37,9 +34,8 @@
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~52.0.42",
     "expo-application": "~6.0.2",
-    "expo-cli": "^6.3.12",
     "expo-custom-switch": "^1.0.2",
-    "expo-dev-client": "~5.0.16",
+    "expo-dev-client": "~5.0.17",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
@@ -59,11 +55,9 @@
     "react-native": "0.76.8",
     "react-native-country-flag": "^2.0.2",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.10.4",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.16.1",
@@ -86,19 +80,24 @@
     "@types/react-native-dotenv": "^0.2.2",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.5",
-    "npm-force-resolutions": "^0.0.10",
     "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.3.3"
   },
   "resolutions": {
-    "expo-modules-autolinking": "2.0.0",
-    "@expo/config-plugins": "9.0.0",
-    "@expo/prebuild-config": "8.0.0",
     "metro": "0.81.3",
-    "metro-config": "0.81.3",
     "metro-resolver": "0.81.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "redux-persist"
+        ],
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
