Correccion del list para la sim

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 ENCRIPTADOS_API_URL=https://encriptados.io/wp-json/api/v1/
+API_BASE_URL = "https://encriptados.es/wp-json/encriptados/v1";
+
 
 NODE_ENV=production
 EAS_SKIP_AUTO_FINGERPRINT=1
