Cambios de estilos de los temas claro y oscuro para algunas vistas

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@testing-library/react-native": "^12.6.1",
     "apisauce": "^3.0.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-custom-switch": "^1.0.2",
     "expo-dev-client": "~5.0.19",
@@ -42,7 +42,7 @@
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "^0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
